--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -18,8 +18,14 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
+.container{
+  width: 100vw;
+  padding: 10px 50px;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
