--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -21,13 +23,21 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+  
 }
 .container{
   width: 100vw;
-  padding: 10px 50px;
+  /* padding: 10px 50px; */
 }
+
+
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
+
+/* CAROUSEL */
