--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -31,10 +31,11 @@ body {
   margin: 0;
   padding: 0;
   
+  
 }
 .container{
-  width: 100vw;
-  /* padding: 10px 50px; */
+  padding: 0 50px;
+  margin: 0 auto;
 }
 
 
