--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -31,11 +31,11 @@ body {
   margin: 0;
   padding: 0;
   
-  
 }
 .container{
   padding: 0 50px;
   margin: 0 auto;
+  
 }
 
 
@@ -47,4 +47,21 @@ body {
 }
 
 
-/* CAROUSEL */
+/* animate */
+.box_glass::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+ background: linear-gradient(50deg,transparent 50%,rgba(255,255,255,.1) 60%,rgba(255,255,255,.5) 70%,transparent 71%);
+ background-size: 200% 100%;
+ background-position: 200% 0;
+ transition: .5s;
+}
+.box_glass:hover::after{
+  background-position: -20% 0;
+  cursor: pointer;
+}
+
