--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -30,7 +30,6 @@ body {
   padding: 0;
 }
 .container {
-
   padding: 10px 50px;
 
   /* carousel */
@@ -94,44 +93,72 @@ body {
   }
 
   /* sponsors */
-  .sponsors{
-    .row{
-      .general{
-        .itemDonors{
-          img{
+  .sponsors {
+    .row {
+      .general {
+        .itemDonors {
+          img {
             object-fit: cover;
             height: 220px;
             /* min-height: 220px; */
           }
         }
       }
-        
     }
   }
 
-
   /* PAGE THONG TIN */
   /* carouThongTin */
-  .carouThongTin{
-    .bgThongTin{
-      img{
+  .carouThongTin {
+    .bgThongTin {
+      img {
         background-size: cover;
-    
-        
       }
     }
-    .contentThongTin{
+    .contentThongTin {
       transform: translate(-50%, -50%);
       text-align: center;
     }
   }
-
-
+  .gioiThieu {
+    .gtItem {
+      .gtDeltailL {
+        h6 {
+          font-size: 20px;
+        }
+        h5 {
+          font-size: 40px;
+        }
+        p {
+          span {
+            font-size: calc(60px + 0.75vw);
+            line-height: 40px;
+            color: indianred;
+            float: left;
+            padding-top: 10px;
+            padding-right: 5px;
+            font-family: Sansita One;
+          }
+        }
+      }
+      .gtDeltailR{
+        background: url("https://demo2.cybersoft.edu.vn/static/media/solutions-hero-green-bg.15753edf.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 50%;
+        img{
+          height: 350px;
+          object-fit: contain;
+        }
+      }
+    }
+  }
 }
 
 /* animatedetail */
 @keyframes animatedetail {
-  0%{}
+  0% {
+  }
   100% {
     transform: translateY(0); /* Về vị trí ban đầu */
   }
@@ -146,22 +173,26 @@ body {
   }
 }
 
-
 /* animate */
-.box_glass::after{
+.box_glass::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
- background: linear-gradient(50deg,transparent 50%,rgba(255,255,255,.1) 60%,rgba(255,255,255,.5) 70%,transparent 71%);
- background-size: 200% 100%;
- background-position: 200% 0;
- transition: .5s;
+  background: linear-gradient(
+    50deg,
+    transparent 50%,
+    rgba(255, 255, 255, 0.1) 60%,
+    rgba(255, 255, 255, 0.5) 70%,
+    transparent 71%
+  );
+  background-size: 200% 100%;
+  background-position: 200% 0;
+  transition: 0.5s;
 }
-.box_glass:hover::after{
+.box_glass:hover::after {
   background-position: -20% 0;
   cursor: pointer;
 }
-
